--- a/templates/index.html
+++ b/templates/index.html
@@ -3,5 +3,6 @@
 
 {% include 'blocks/landheader.html' %}
 {% include 'blocks/features.html' %}
+{% include 'blocks/testimonial.html' %}
 
 {% endblock %}
