--- a/templates/blocks/features.html
+++ b/templates/blocks/features.html
@@ -1,6 +1,6 @@
 {% if features %}{% with f=features %}
 <section class="py-5" id="features">
-    <div class="container px-5 my-5">
+    <div class="container px-5 mt-5">
         <div class="row gx-5">
             <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">{{ f.label }}</h2></div>
             <div class="col-lg-8">
@@ -8,8 +8,10 @@
                     {% for item in f.features %}
                     <a class="text-decoration-none text-reset" href="{{ item.link }}">
                     <div class="col mb-5 h-100">
-                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi {{ item.icon }}"></i></div>
-                        <h2 class="h5">{{ item.title }}</h2>
+                        <div class="d-flex justify-content-start">
+                            <span class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi {{ item.icon }}"></i></span>
+                            <h2 class="h5 mx-3 mt-2">{{ item.title }}</h2>
+                        </div>
                         <p class="mb-0">{{ item.description }}</p>
                     </div>
                     </a>
