--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -2848,7 +2848,7 @@ textarea.form-control-lg {
   --bs-btn-bg: #ab45ff;
   --bs-btn-border-color: #ab45ff;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #0b5ed7;
+  --bs-btn-hover-bg: #ab80ff;
   --bs-btn-hover-border-color: #0a58ca;
   --bs-btn-focus-shadow-rgb: 49, 132, 253;
   --bs-btn-active-color: #fff;
