--- a/templates/blocks/testimonial.html
+++ b/templates/blocks/testimonial.html
@@ -1,5 +1,5 @@
 {% if testimonial %}{% with t=testimonial %}
-<div class="py-3 bg-light">
+<div class="py-3" style="background-color:#e1e1e1">
     <div class="container px-5 my-5">
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-10 col-xl-7">
