Add contact block, fix footer

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,4 +3,18 @@
     {% include 'blocks/landheader.html' %}
     {% include 'blocks/features.html' %}
     {% include 'blocks/testimonial.html' %}
+    <div class="py-5 align-items-center justify-content-center">
+        <div class="text-center">
+            <h2 class="fw-bolder">Contact</h2>
+            <p class="text-muted mb-4">
+                You can email us at
+                <br />
+                <span class="fw-bold text-primary">vegan_warrior_club@proton.me</span>
+            </p>
+                <div class="h6 fw-bolder">Follow us on Instagram: </div>
+                <a class="fs-5 px-2 text-decoration-none text-reset" href="https://www.instagram.com/vegan_warrior_club/">
+                    <span class="bi bi-instagram"></span> <span class="text-primary">vegan_warrior_club</span>
+                </a>
+        </div>
+    </div>
 {% endblock %}
