Fix footer links, fix cards width, add plausible

--- a/templates/blocks/cards.html
+++ b/templates/blocks/cards.html
@@ -3,7 +3,7 @@
     {% if cards_label %}<h2 class="fw-bolder fs-5 mb-4">{{ cards_label }}</h2>{% endif %}
     <div class="row gx-3">
         {% for c in cards %}
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-5">
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
             <div class="card h-100 shadow border-0">
                 <img height={{ card_height if card_height else 180 }} class="card-img-top" src="{{ c.preview }}" alt="..." style="object-fit: cover;">
                 <div class="card-body p-4">
