--- a/templates/stat.html
+++ b/templates/stat.html
@@ -1,4 +1,5 @@
 {% extends 'blocks/base.html' %}
 {% block content %}
+    {% include 'blocks/stub.html' %}
     {% include 'blocks/cards.html' %}
 {% endblock %}
