--- a/templates/blocks/landheader.html
+++ b/templates/blocks/landheader.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center">
-                <a href="{{ lh.image.link }}"><img class="img-fluid rounded-3 my-5" src="{{ lh.image.src }}" alt="..." target="{{ lh.image.target }}"/></a>
+                <a href="{{ lh.image.link }}" target="{{ lh.btnmain.target }}"><img class="img-fluid rounded-3 my-5" src="{{ lh.image.src }}" alt="..." target="{{ lh.image.target }}"/></a>
             </div>
         </div>
     </div>
