--- a/templates/blocks/landheader.html
+++ b/templates/blocks/landheader.html
@@ -2,9 +2,12 @@
 <header class="bg-dark py-3">
     <div class="container px-5">
         <div class="row gx-5 align-items-center justify-content-center">
-            <a class="d-xl-none pt-3" href="{{ lh.image.link }}">
-                <img class="img-fluid rounded-3" src="{{ lh.image.src }}" alt="..." target="{{ lh.image.target }}"/>
-            </a>
+            <div class="image-container d-xl-none pt-3">
+                <a href="{{ lh.image.link }}">
+                    <img class="img-fluid rounded-3" src="{{ lh.image.src }}" alt="..." target="{{ lh.image.target }}"/>
+                    <div class="play-button"></div>
+                </a>
+            </div>
             <div class="col-lg-8 col-xl-7 col-xxl-6">
                 <div class="my-5 text-center text-xl-start">
                     <h1 class="display-5 fw-bolder text-white mb-2">{{ lh.title }}</h1>
@@ -15,8 +18,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center">
-                <a href="{{ lh.image.link }}" target="{{ lh.btnmain.target }}"><img class="img-fluid rounded-3 my-5" src="{{ lh.image.src }}" alt="..." target="{{ lh.image.target }}"/></a>
+            <div class="image-container col-xl-5 col-xxl-6 d-none d-xl-block text-center">
+                <a href="{{ lh.image.link }}" target="{{ lh.btnmain.target }}">
+                    <img class="img-fluid rounded-3 my-5" src="{{ lh.image.src }}" alt="..." target="{{ lh.image.target }}"/>
+                    <div class="play-button"></div>
+                </a>
             </div>
         </div>
     </div>
