--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -10846,3 +10846,21 @@ html {
   background-repeat: no-repeat;
   min-height: 15rem;
 }
+
+
+/* Added for Vegan Warrior Club */
+
+.play-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 2rem 0 2rem 4rem;
+  border-color: transparent transparent transparent rgba(255, 255, 255, 0.5);
+}
+.image-container {
+  position: relative;
+}
